# dmx-controller-app

./: .gitignore  .prettierignore  .prettierrc.js  AI_MCP_IMPLEMENTATION_PLAN.md  APPLE_APP_SIGNING_SETUP.md  BUILD  CLAUDE.md  Cargo.toml  LICENSE  MCP_SERVER.md  MODULE.bazel  README.md  VISUALIZERS_PLAN.md  WORKSPACE  buf.gen.yaml  buf.yaml  class_diagram.mmd  deps.bzl  eslint.config.mjs  go.mod  go.sum  index.html  jest.config.js  jest.setup.js  knip.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/setup/: action.yaml
.github/workflows/: build-debian.yml  ci.yaml  deploy.yaml  release.yml
core/: BUILD  Cargo.toml
core/src/: lib.rs
core_interface/: BUILD
core_interface/src/: main.rs
dev/server/: BUILD  main.go  run_server.sh  server.crt  server.key
docs/: DEBUG_SERIAL_DMX_WINDOWS.md  WASM_REMOVAL_PLAN.md
editor/: BUILD  index.html  vite.config.ts
editor/engine/: BUILD
editor/src/: BUILD  Index.module.scss  Index.tsx  _vars.scss  app.tsx  esbuild.config.mjs  index.module.scss  types.d.ts
editor/static/: BUILD  index.html  rcp.css
ilda/: IMPLEMENTATION.md
proto/: BUILD  audio.proto  audio_config.proto  beat.proto  color.proto  controller.proto  ddp.proto  display.proto  dmx.proto  duration.proto  effect.proto  fixture.proto  fixture_definitions.proto  fixture_sequence.proto  light_layer.proto  light_track.proto  output.proto  output_id.proto  pixel_mapping.proto  project.proto  render.proto  scene.proto  sequence.proto  settings.proto  show.proto  spatial_mapping.proto  timecoded.proto  universe.proto  universe_sequence.proto  visualizer.proto  wled.proto
public/: BUILD  vars.css
src/: BUILD  Index.module.css  Index.module.scss  Index.tsx  _vars.scss  app.tsx  types.d.ts  vars-export.scss  vars.css
src-engine/: Cargo.toml  build.rs
src-engine/src/: audio.rs  beat.rs  color.rs  lib.rs  midi.rs  palette.rs  project.rs  proto.rs  tile.rs  waveform.rs
src-engine/src/render/: ddp_render_target.rs  display_render_target.rs  dmx_render_target.rs  mod.rs  preset_effect.rs  project.rs  ramp_effect.rs  random_effect.rs  render.rs  render_target.rs  scene.rs  segment_mapping.rs  sequence_effect.rs  shaders.rs  strobe_effect.rs  timecoded_show.rs  util.rs  wled_render_target.rs
src-engine/src/visualizer/: builtin.rs  mod.rs  shader_wrap.rs  tree.rs  uniforms.rs
src-engine/src/visualizer/shaders/: audio_bars.glsl  audio_polar.glsl  beat_pulse.glsl  col_black.glsl  col_color.glsl  col_plasma.glsl  col_rainbow.glsl  ef_fade.glsl  msk_audio_bars.glsl  msk_beat_pulse.glsl  msk_vignette.glsl  plasma.glsl  rainbow.glsl  vignette.glsl  vis_audio_3d.glsl  vis_audio_blob.glsl  vis_audio_wave.glsl
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_analysis.rs  audio_detection.rs  audio_files.rs  audio_input.rs  beat.rs  cas.rs  ddp.rs  display_loop.rs  fft.rs  lib.rs  mcp.rs  midi.rs  output_loop.rs  project.rs  render.rs  sacn.rs  serial.rs  shader.rs  shader_spike.rs  wled.rs
src-tauri/src/mcp/: examples.rs  mod.rs  server.rs  tools.rs  types.rs
src/audio/: audioTrackRegistry.ts  waveformWorker.ts
src/components/: AudioLevels.module.css  AudioLevels.tsx  AudioTrackVisualizer.tsx  BeatEditor.module.css  BeatEditor.module.scss  BeatEditor.tsx  Browser.module.css  Browser.tsx  Button.module.css  Button.module.scss  Button.tsx  Clickwrap.module.css  Clickwrap.tsx  ClipboardControls.tsx  ColorSwatch.module.css  ColorSwatch.module.scss  ColorSwatch.tsx  Combobox.module.css  Combobox.tsx  ControllerConnection.module.css  ControllerConnection.module.scss  ControllerConnection.tsx  DdpVisualizer.tsx  DisplayVisualizer.tsx  DmxUniverseVisualizer.tsx  Dropdown.module.css  Dropdown.module.scss  Dropdown.tsx  Duration.module.css  Duration.module.scss  Duration.tsx  Effect.module.scss  EffectState.module.css  EffectState.module.scss  EffectState.tsx  ErrorBoundary.tsx  Input.module.css  Input.module.scss  Input.tsx  Layer.module.css  (+69 more)
src/contexts/: AudioInputContext.tsx  BeatContext.tsx  ClipboardContext.tsx  ControllerContext.module.css  ControllerContext.module.scss  ControllerContext.tsx  DialogContext.tsx  EffectRenderingContext.tsx  PaletteContext.tsx  ProjectContext.module.css  ProjectContext.tsx  SacnRendererContext.tsx  SerialContext.tsx  ShortcutContext.module.css  ShortcutContext.module.scss  ShortcutContext.tsx  TimeContext.tsx  VersatileContainer.module.css  VersatileContainer.module.scss  VersatileContianer.tsx  WledRendererContext.tsx
src/engine/: channel.ts  context.ts  display.ts  effect.ts  group.test.ts  group.ts  rampEffect.ts  randomEffect.ts  render.ts  renderRouter.ts
src/external_controller/: externalController.test.ts  externalController.ts  tileStrength.ts
src/hooks/: laneInteraction.ts  playbackStatus.ts  renderMode.ts  timelineScroll.ts  useTileGesture.ts  waveform.ts
src/icons/: IconRgb.tsx
src/pages/: AboutPage.module.css  AboutPage.tsx  AssetBrowserPage.module.css  AssetBrowserPage.module.scss  AssetBrowserPage.tsx  ControllerPage.module.css  ControllerPage.module.scss  ControllerPage.tsx  LivePage.module.css  LivePage.module.scss  LivePage.tsx  ProjectPage.module.css  ProjectPage.module.scss  ProjectPage.tsx  ShowPage.module.css  ShowPage.module.scss  ShowPage.tsx  TimecodedPage.module.css  TimecodedPage.tsx
src/system_interfaces/: audio_input.ts  beat_detection.ts  cas.ts  engine.ts  midi.ts  output_loop.ts  project.ts  sacn.ts  serial.ts  shader.ts  storage.ts  tauri_render_listener.ts  util.ts  wled.ts
src/util/: browserUtils.ts  colorUtil.ts  dialogUtil.ts  effectUtils.ts  gdtf.ts  legal.ts  mapUtils.ts  metronome.ts  numberUtils.test.ts  numberUtils.ts  projectUpgrader.ts  projectUtils.ts  random.ts  storageUtil.ts  styleUtils.ts  tile.ts  time.ts  timecodeUtils.test.ts  timecodeUtils.ts  uuidUtils.ts
src/wasm-engine/: CLAUDE.md  Cargo.toml
src/wasm-engine/src/: lib.rs
web/: index.html  privacy.html  robots.txt  sitemap.xml  style.css  terms.html  vars.css
(+225 files in other folders)
