module(
    name = "dmx-controller-app",
    version = "0.1.0",
)

###############################################################################
# R U L E S   P K G
###############################################################################

bazel_dep(name = "rules_pkg", version = "1.1.0")

###############################################################################
# R U L E S  P R O T O
###############################################################################

bazel_dep(name = "rules_proto", version = "7.1.0")

###############################################################################
# R U L E S   J S
###############################################################################

bazel_dep(name = "rules_nodejs", version = "6.3.4")
bazel_dep(name = "aspect_rules_js", version = "2.3.4")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

###############################################################################
# R U L E S   T S
###############################################################################

bazel_dep(name = "aspect_rules_ts", version = "3.5.2")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)

use_repo(rules_ts_ext, "npm_typescript")

###############################################################################
# R U L E S   E S B U I L D
###############################################################################

bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")
esbuild = use_extension("@aspect_rules_esbuild//esbuild:extensions.bzl", "esbuild")
esbuild.toolchain(
    name = "esbuild",
    esbuild_version = "0.23.0",
)
use_repo(esbuild, "esbuild_toolchains")

###############################################################################
# R U L E S   G O
###############################################################################

bazel_dep(name = "rules_go", version = "0.53.0")

###############################################################################
# R U L E S   G A Z E L L E
###############################################################################

bazel_dep(name = "gazelle", version = "0.42.0")

###############################################################################
# R U L E S  R U S T
###############################################################################

bazel_dep(name = "rules_rust", version = "0.59.2")

###############################################################################
# R U L E S   B A Z E L  L I B
###############################################################################

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
