"""
Workspace dependencies for dmx-controller-app project.
"""
module(
    name = "dmx-controller-app",
    version = "0.1.0",
)

###############################################################################
# R U L E S   P K G
###############################################################################

bazel_dep(name = "rules_pkg", version = "1.1.0")

###############################################################################
# R U L E S  P R O T O
###############################################################################

bazel_dep(name = "rules_proto", version = "7.1.0")

###############################################################################
# R U L E S   J S
###############################################################################

bazel_dep(name = "aspect_rules_js", version = "1.34.1")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "5.8.2")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

###############################################################################
# R U L E S   T S
###############################################################################

bazel_dep(name = "aspect_rules_ts", version = "2.4.2")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

###############################################################################
# R U L E S   E S B U I L D
###############################################################################

bazel_dep(name = "aspect_rules_esbuild", version = "0.16.0")

###############################################################################
# R U L E S   G O
###############################################################################

bazel_dep(name = "rules_go", version = "0.53.0")

###############################################################################
# R U L E S   G A Z E L L E
###############################################################################

bazel_dep(name = "gazelle", version = "0.42.0")

###############################################################################
# R U L E S  R U S T
###############################################################################

bazel_dep(name = "rules_rust", version = "0.62.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

###############################################################################
# R U L E S   B A Z E L  L I B
###############################################################################

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
