[package]
name = "dmx-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
prost = "0.14.1"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.14.1"

[lints.rust]
dead_code = "deny"
deprecated = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
redundant_else = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
