[package]
name = "dmx_controller_app"
version = "0.1.0"
description = "A lighting controller for DMX and friends."
authors = ["wmmiii"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0.147"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
serialport = "4.7.3"
open_dmx = "1.1.1"
midir = "0.10.2"
sacn = "0.11.0"
tauri-plugin-process = "2"
dmx-engine = { path = "../src-engine" }
prost = "0.14.1"
tauri-plugin-keepawake = "0.1.0"
tokio = { version = "1.48.0", features = ["time", "macros", "sync", "rt-multi-thread"] }
reqwest = { version = "0.12.28", features = ["json"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
