[package]
name = "dmx_controller_app"
version = "0.1.0"
description = "A lighting controller for DMX and friends."
authors = ["wmmiii"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
dmx-engine = { path = "../src-engine" }
log = "0.4"
prost = "0.14.1"
reqwest = { version = "0.12.28", features = ["json"] }
sacn = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tokio = { version = "1.48.0", features = ["time", "macros", "sync"] }

[patch.crates-io]
ringbuffer = { git = "https://github.com/NULLx76/ringbuffer", tag = "0.7.1" }

[target.'cfg(not(target_os = "ios"))'.dependencies]
cpal = "0.13.3"
midir = "0.10.2"
open_dmx = "1.1.1"
serialport = "4.7.3"
tauri-plugin-keepawake = "0.1.0"

[lints.rust]
dead_code = "deny"
deprecated = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
